# AsimpleSIMPLE

./: README.md
simple/: CMakeLists.txt
simple/src/: Solvers.cpp  Solvers.h  StructuredMesh.cpp  StructuredMesh.h  collocated_segregated.cpp  collocated_segregated.h  collocated_sharing.cpp  collocated_sharing.h  collocated_sharing_velpre.cpp  collocated_sharing_velpre.h  kernels.cpp  kernels.h  main.cpp
